edit and add timetable

--- a/.vscode/timetable.html
+++ b/.vscode/timetable.html
@@ -56,14 +56,13 @@
 
     <td>Monday</td>
 
-    <hl><td colspan="3" align=center  ><center>228202-54[Lecture]<br>KB-405</td></center>
+    <td id = "subject" colspan="3" align=center  >228202-54[Lecture]<br>KB-405</td>
 
     <td colspan="2">&nbsp</td>
 
   
 
-<td colspan="2" align=center ><center>228102-54[Lecture]<br>KB-402</td></center>
-
+<td  id = "subject" colspan="2" >228102-54[Lecture]<br>KB-402</td>
     <td colspan="6">&nbsp</td>
 
     
@@ -80,7 +79,7 @@
 
     
 
-    <td colspan="3" align=center ><center>887230-54[Lecture]<br>COMP-108<center></td>
+    <td id = "subject"  colspan="3"  >887230-54[Lecture]<br>COMP-108</td>
 
     <td colspan="8">&nbsp</td>
 
@@ -92,11 +91,11 @@
 
     <td>Wednesday</td>
 
-     <td colspan="3" align=center ><center>887371-54[Lecture]<br>MIT-ทางไกล</td></center>
+     <td id = "subject" colspan="3" >887371-54[Lecture]<br>MIT-ทางไกล</td>
 
      <td colspan="8">&nbsp</td>
 
-    <td colspan="2" align=center ><center>887371-54[Lab] <br>SD-413</td></center>
+    <td id = "subject" colspan="2" align=center >887371-54[Lab] <br>SD-413</td>
 
 
 
@@ -108,9 +107,9 @@
 
     <td colspan="9">&nbsp</td>
 
-      <td colspan="2" align=center><center>886210-54[Lecture]<br>SD-513</td></center>
+      <td id = "subject" colspan="2" >886210-54[Lecture]<br>SD-513</td>
 
-       <td colspan="2" align=center ><center>886210-54[Lab]<br>SD-512</td></center>
+       <td id = "subject" colspan="2">886210-54[Lab]<br>SD-512</td>
 
   </tr>
 
@@ -118,22 +117,16 @@
 
     <td>Friday</td>
 
-    <td colspan="2" align=center ><center>887260-54[Lab] <br><center> SD-512</td></center>
+    <td id = "subject" colspan="2">887260-54[Lab] <br> SD-512</td>
 
     <td colspan="3">&nbsp</td>
 
-    <td colspan="2" align=center  ><center>887260-54[Lecture] <br><center> SD-506</td></center>
+    <td id = "subject" colspan="2" >887260-54[Lecture] <br> SD-506</td>
 
     <td colspan="6">&nbsp</td>
 
   </tr>
-
-
-
 </table>
-
-
-
 </body>
 
 </html>
