add group and template

--- a/timetable.html
+++ b/timetable.html
@@ -56,7 +56,7 @@
 
     <td>Monday</td>
 
-    <td id = "subject" colspan="3" align=center  >228202-54[Lecture]<br>KB-405</td>
+    <td id = "subject" colspan="3"  >228202-54[Lecture]<br>KB-405</td>
 
     <td colspan="2">&nbsp</td>
 
