--- a/enroll.html
+++ b/enroll.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<h2>วิชาที่ลงทะเบียน</h2>
+<h2 >วิชาที่ลงทะเบียน</h2>
 <table>
 
 <tr>
@@ -23,6 +23,44 @@
 </tr>
 <td>228102 </td>
 <td>Art of Speaking and Presentation<br>ศิลปะการพูดและการนำเสนอ</td>
+<TD>6</TD>
+<td>3</td>
+<td>อาจารย์เสาวคนธ์ วงศ์ศุภชัยนิมิต</td>
+<tr>
+<td>228202</td>
+<td>Academic Article and Research Writing <br>การเขียนบทความวิชาการและงานวิจัย</td>
+<td>2</td>
+<td>3</td>
+<td>อาจารย์ ดร.ขจิตา ศรีพุ่ม</td>
+</tr>
+<tr>
+    <td>886210</td>
+    <td>Data Structures and Algorithms<br>โครงสร้างข้อมูลและอัลกอริทึม</td>
+    <td>3</td>
+    <td>3</td>
+    <td>อาจารย์พัชรินทร์ บัวเย็น</td>
+</tr>
+<tr>
+<td>887230</td>
+<td>Computer Networks <br>เทคโนโลยีเครือข่ายคอมพิวเตอร์</td>
+<td>3</td>
+<td>3</td>
+<td>ผู้ช่วยศาสตราจารย์ ดร.ณัฐนนท์ ลีลาตระกูล</td>
+</tr>
+<tr>
+    <td>887260</td>
+    <td>Human and Computer Interaction<br>ปฏิสัมพันธ์ระหว่างมนุษย์และคอมพิวเตอร์</td>
+    <td>2</td>
+    <td>3</td>
+    <td>อาจารย์วีระ เกษตรสิน</td>
+</tr>
+<tr>
+<td>887371</td>
+<td>	Web Programming<br>การเขียนโปรแกรมบนเว็บ</td>
+<td> 3</td>
+<td>3</td>
+<td>อาจารย์วิทวัส พันธุมจินดา</td>
+</tr>
 </table>
 </body>
 </html>
