--- a/gallery.html
+++ b/gallery.html
@@ -24,14 +24,14 @@
   <a target="_blank" href="https://scontent.fbkk14-1.fna.fbcdn.net/v/t1.0-9/16426098_1271825566217184_7183333249802112719_n.jpg?oh=4e554ded163cc6f95d5899c8c5c80eb8&oe=5944BADD">
     <img src="https://scontent.fbkk14-1.fna.fbcdn.net/v/t1.0-9/16426098_1271825566217184_7183333249802112719_n.jpg?oh=4e554ded163cc6f95d5899c8c5c80eb8&oe=5944BADD" alt="friends" width="300" height="200">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">เที่ยวกับเพื่อน ณ แกลง จ.ระยอง</div>
 </div>
 
 <div class="img">
-  <a target="_blank" href="mountains.jpg">
-    <img src="mountains.jpg" alt="Mountains" width="300" height="200">
+  <a target="_blank" href="https://scontent.fbkk14-1.fna.fbcdn.net/v/t1.0-9/16406868_1271825572883850_8127774579191519258_n.jpg?oh=3824443227738a6f10c79f4f521cd6da&oe=59159ACF">
+    <img src="https://scontent.fbkk14-1.fna.fbcdn.net/v/t1.0-9/16406868_1271825572883850_8127774579191519258_n.jpg?oh=3824443227738a6f10c79f4f521cd6da&oe=59159ACF" alt="Sea" width="300" height="200">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">เที่ยวทะเลบางแสน กับแฟน ^^</div>
 </div>
 
 </body>
