--- a/enroll.html
+++ b/enroll.html
@@ -1,12 +1,21 @@
 <html>
 
 <head>
+    <title>Enroll</title>
     <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="mystyle.css">
  <meta charset="utf-8">
 </head>
 
 <body>
+<ul>
+  
+<li><a class="active" href="lab02.html">Home</a></li>
+  <li><a href="aboutme.html">Aboutme</a></li>
+  <li><a href="timetable.html">Timetable</a></li>
+  <li><a href="Enroll.html">Enroll</a></li>
+  <li><a href="gallery.html">Gallery</a></li>
+</ul>
 <h2 >วิชาที่ลงทะเบียน</h2>
 <table>
 
