--- a/lab02.html
+++ b/lab02.html
@@ -8,8 +8,9 @@
 <body>
 
 <ul>
-  <li id = "de" ><a class="active" href="#Me">>Suguz<</a></li>
-  <li><a class="active" href="#home">Home</a></li>
+  
+  <li><a class="active" href="lab02.html">Home</a></li>
+  <li><a href="http://angsila.cs.buu.ac.th/~58160422/887371/lab01/aboutme.html">Aboutme</a></li>
   <li><a href="timetable.html">Timetable</a></li>
   <li><a href="Enroll.html">Enroll</a></li>
   <li><a href="gallery.html">Gallery</a></li>
