--- a/gallery.html
+++ b/gallery.html
@@ -1,11 +1,19 @@
 <html>
 <head>
+<title>My gallery</title>
  <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="mystyle.css">
     <meta charset="utf-8">
 </head>
 <body>
-
+<ul>
+  
+<li><a class="active" href="lab02.html">Home</a></li>
+  <li><a href="aboutme.html">Aboutme</a></li>
+  <li><a href="timetable.html">Timetable</a></li>
+  <li><a href="Enroll.html">Enroll</a></li>
+  <li><a href="gallery.html">Gallery</a></li>
+</ul>
 <div class="img">
   <a target="_blank" href="https://scontent.fbkk14-1.fna.fbcdn.net/v/t1.0-9/11267925_889407767792301_1898459704208979536_n.jpg?oh=853689d0c2e9329952d04923c7ab6753&oe=5945A171">
     <img src="https://scontent.fbkk14-1.fna.fbcdn.net/v/t1.0-9/11267925_889407767792301_1898459704208979536_n.jpg?oh=853689d0c2e9329952d04923c7ab6753&oe=5945A171" alt="bigbike" width="1000" height="1000">
