--- a/timetable.html
+++ b/timetable.html
@@ -4,10 +4,17 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="mystyle.css">
+<title>Timetable</title>
 </head>
 
 <body>
-
+<ul>
+<li><a class="active" href="lab02.html">Home</a></li>
+  <li><a href="aboutme.html">Aboutme</a></li>
+  <li><a href="timetable.html">Timetable</a></li>
+  <li><a href="Enroll.html">Enroll</a></li>
+  <li><a href="gallery.html">Gallery</a></li>
+</ul>
 
 
 <h2>ตารางเรียนปัจจุบัน</h2>
